<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".AddStudentActivity"
    android:layout_margin="15dp">

    <TextView
        android:id="@+id/namelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"/>

    <EditText
        android:id="@+id/studentname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Student_name"
        android:layout_marginBottom="30dp"/>
    <TextView
        android:id="@+id/idlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_label"/>

    <EditText
        android:id="@+id/studentid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Student_id"
        android:layout_marginBottom="51dp"/>
    <Button
        android:id="@+id/addbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Add_student"
        android:layout_marginBottom="30dp"
        android:background="@drawable/coloredbtn"/>

    <Button
        android:id="@+id/listAllBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_gravity="center"
        android:text="@string/List_students"
        android:background="@drawable/coloredbtn"/>

</LinearLayout>