<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateCourse"
    android:layout_margin="15dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_course_name"
        android:layout_marginBottom="5dp"/>
    <EditText
        android:id="@+id/newcname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_new_name"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_course_id"
        android:layout_marginBottom="5dp"/>
    <EditText
        android:id="@+id/newcid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/course_new_id"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_changes"
        android:layout_gravity="center"
        android:background="@drawable/coloredbtn"/>
</LinearLayout>